--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Kanit:700&display=swap" rel="stylesheet">
+    <title>Power 2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
